[package]
name = "particles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
rand = "0.8.5"
rand_chacha = "0.3.1"

[features]
# TODO: turn this off for browser
default = ["bevy/dynamic_linking"]
